      ICMP: add dissector for ICMP Interface Identification Object
      ICMP: print RFC8335 PROBE extended echo/reply messages.
      IEEE 802.11: include the Mesh ID field while printing management
        frames.
      NetFlow: Use tcp_flag_values[] for TCP flags.
      NTP: Check that the entire extension field is in the capture even
        if it isn't printed
      MPTCP: parse MPC data_len field, print flags from MP_CAPABLE option.
      OSPF: Fix printing of Traffic Engineering Link TLVs to correctly
        advance the packet data pointer
      OSPF: Print more truncation indications
      OSPF: Add more length checks
      SLL2: Translate interface indices to names on Linux only.
      TCP: Add support for the AE (AccECN) flag.
    User interface:
      Add optional unit suffix on -C file size.
      Add --print-sampling to print every Nth packet instead of all.
      Add --lengths option to print the captured and original packet lengths.
    Source code:
      Drop support for building with versions of libpcap that don't
        support all the libpcap 1.0 APIs.
      Use %zu when printing a sizeof to squelch compiler warnings
      Remove unused missing/snprintf.c.
      Remove unused missing/strdup.c.
      (FIXME: somebody please wrap the line below just before the release)
      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EGP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, mobile, MSDP, NetFlow, NFLOG, NTP, OLSR, pflog, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
      DCCP, EGP: Replace custom code with tok2str()
      UDP: Clean up address and port printing.
      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
      Provide GET_ macros for 4-byte and 8-byte floating-point numbers
        and use them rather than custom code
      Disregard setlinebuf(3), always use setvbuf(3).
      Change Sun RPC code licence to BSD-3-Clause.
    Building and testing: