@@ -24,6 +24,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       NetFlow: Use tcp_flag_values[] for TCP flags.
       NTP: Check that the entire extension field is in the capture even
         if it isn't printed
+      NTP: Print kiss codes relevant for NTP debugging.
       MPTCP: parse MPC data_len field, print flags from MP_CAPABLE option.
       OSPF: Fix printing of Traffic Engineering Link TLVs to correctly
         advance the packet data pointer
